header fix on ios
underline fixed, and responsivity fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -314,8 +314,15 @@ header {
       padding-bottom: 50px;
       color: rgba(0, 0, 0, 0.7); }
 
+@media screen and (max-width: 550px) {
+    
+    header h1 span {
+        border-bottom: 0;
+    }
+    
+}
+
 @media screen and (max-width: 700px) {
-  
     
   .services-wrapper .service {
     
